# anti-captcha

./: .gitignore  CLAUDE.md  README.md  TAKS.md  main.py  pyproject.toml  requirements.txt
src/: augmentation.py  data_loader.py  evaluator.py  losses.py  models.py  trainer.py  transforms.py
