[project]
name = "anti-captcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
default = true

[[tool.uv.index]]
url = "http://pypi.yimian.com.cn/simple"
